[metadata]
name = astra-lib
author = Nipun Batra
author-email = nipun.batra@iitgn.ac.in
description = A ML toolkit with code bits useful for our day to day research
url = https://github.com/sustainability-lab/ASTRA
license = MIT
long_description_content_type = text/markdown
long_description = file: README.md
